# modularmotifs

./: .gitignore  .gitmodules  README.md  canvas_user_interface.py  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: black.yml  check.yml
core/: design.py  motif.py
design/: build.sbt
design_examples/: blah.py  deer_scene.py  tester.py
design_examples/composite_motifs/: adults.py  arrow_left.py  arrow_right.py  bud_vine.py  butterfly.py  children.py  composite7.py  crosses.py  deer.py  deer_tree.py  diamond.py  dots.py  floral_meander.py  flower_big.py  heart1.py  hearts.py  ivy.py  mountain_meander.py  ring.py  snowflake.py  sun.py  xs.py  xs_2.py
design_examples/test_dsl_examples/: stress_test.py
modularmotifs/: main.py  rest_api.py
modularmotifs/core/: __init__.py  colorization.py  composite_motif.py  design.py  float.py  motif.py  pixel_grid.py  rgb_color.py  util.py
modularmotifs/dsl/: README.md  __init__.py  _colorops.py  _grammar.py  _motif_builder.py  _parser.py  _syntax.py  parser.py
modularmotifs/genai/: README.md
modularmotifs/handknit/: README.md  generate.py
modularmotifs/knitout/: README.md  convert.py  knitout.py
modularmotifs/motiflibrary/: _big_examples.py  examples.py  saved_motifs.py
modularmotifs/ui/: README.md  callbacks.py  canvas_user_interface.py  interface.py  (+10 more)
react-app/: README.md  package-lock.json  package.json  tsconfig.json
tests/: test_calc_floats.py  test_conversion.py  test_design.py  test_floatstrand.py  test_knitout.py  test_magic_wand_selection.py  test_motif.py  test_selection.py
(+41 files in other folders)
